# GeometricLens

./: .gitignore  .prompt_search_15:32:05.txt.swp  .prompt_search_16:38:35.txt.swp  .slurm-403895.out.swp  .slurm-403931.out.swp  .slurm-403960.out.swp  .slurm-407832.out.swp  .slurm-408930.out.swp  .slurm-409189.out.swp  .slurm-418649.out.swp  .slurm-418704.out.swp  .slurm-420965.out.swp  .slurm-422256.out.swp  .slurm-736890.out.swp  .slurm-768047.out.swp  .slurm-768062.out.swp  .slurm_runner.py.swp  .submit_analysis.swp  .submit_id.swp  .~merger.ipynb  1  README.md  Untitled.ipynb  array_retriever-Copy1.ipynb  array_retriever.ipynb  bug.npy  config.json  dataset_utils.py  fsdp.conf  generated_script.sh  generation.py  id_computer.py  inference.py  inference_all.py  inference_backup.py  inference_big.py  inference_nobatch.py  inference_overlap_long.py  inference_overlap_short.py  label_overlap_computer.py  (+62 more)
.ipynb_checkpoints/: array_retriever-1-checkpoint.ipynb  fsdp-checkpoint.conf  linear_probe-checkpoint.ipynb  linear_probe-checkpoint.py  merger-checkpoint.ipynb
analysis/: few_shot_acc.py  get_data.sh
backup/: inference.py
cluster_analysis/: cluster_analysis.py  compute_overlap.py  extract_repr.py  test.py
common/: conifg_plot.py  global_vars.py  globals.py  metadata_db.py  tensor_storage.py  utils.py
config/: config.json  config_metric.json  config_test.json  metrics.txt  subject.txt
dataset_util/: utils.py
dataset_utils/: commonsenseqa.py  dummy.txt  mmlu.py  openbookqa.py  scenario_adapter.py  scenario_builder.py  scenarion_adapter.py  tmp.ipynb  utils.py
datasets/: utils.py
datasets_overlap_long/: utils.py
datasets_overlap_short_swap/: utils.py
generation/: generation.py  utils.py
hidden_states_geometry/: geometry.py  utils.py
logging/: logging_config.py
logging_utils/: logging_config.py
mcqa/: pyvenv.cfg
metrics/: #hidden_states.py#  .overlap.py.swp  backup.py  cka.py  metrics.py  (+16 more)
(+310 files in other folders)
