[tool.poetry]
name = "mcqa-benchmark"
version = "0.1.0"
description = ""
authors = ["alexserra98 <s280586@ds.units.it>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.11"
numpy = "1.26.4"
jaxtyping = "^0.2.30"
scipy = "^1.13.1"
tqdm = "^4.66.4"
h5py = "^3.11.0"
einops = "^0.8.0"
tokenizer = "^3.4.3"
tokenizers = "^0.19.1"
jupyter = "^1.0.0"
torch = "^2.3.1"
dadapy = {path = "../DADApy"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
